Try to fix overflow scroll

--- a/src/style.css
+++ b/src/style.css
@@ -35,8 +35,6 @@
   color: var(--color-fg)
 }
 
-html,
 body {
-  width: 100vw;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
